--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div style="width:570px;">
             <img style="width:100%;" src="https://static.dezeen.com/uploads/2017/08/tinder-redesign-graphics_dezeen_hero-1.jpg" alt="logo"/>
             <div id="random-text"></div>
-            <img style="width:100%;" src="https://ichef.bbci.co.uk/images/ic/720x405/p064kl2c.jpg" alt="logo"/>
+            <img style="width:100%;" src="buttom.jpg" alt="logo"/>
             <button onclick="domGen();">צור בת חדשה</button>
         </div>
 
