--- a/index.html
+++ b/index.html
@@ -6,23 +6,21 @@
     <script>var module = {};</script>
     <script src=".\tinder.js"></script>
     <script>var gen = module.exports;</script>
-    <title>מייצר משפטים</title>
+    <title>מייצר ביו טינדר</title>
     <link href=".\style.css" rel="stylesheet"/>
   </head>
-  <body style="height: 100%; width: 100%" dir='rtl' lang='he'>
-
-
+  <body style="height: 80%; width: 100%" dir='rtl' lang='he'>
     <div style="display:flex; justify-content: center; padding: 0 300px; flex-direction: column; align-content: center">
         <h1>מחולל ביו של בנות בטינדר/ קיופיד</h1>
-             <p>גרסא 1.0, נוצרה ע"י
+         <p>    גרסא 1.0, נוצרה ע"י
             <a href="https://twitter.com/pitayaki">פיתהצ'ו</a>
                 ו
                 <a href="https://twitter.com/grandtheftaba">אפס דיפוט</a>
         </p>
         <div style="width:570px;">
-            <img style="width:100%;" src="https://static.dezeen.com/uploads/2017/08/tinder-redesign-graphics_dezeen_hero-1.jpg" alt="logo"/>
+            <img style="width:100%;" src="profile.png" alt="logo"/>
             <div id="random-text"></div>
-            <img style="width:100%;" src="buttom.jpg" alt="logo"/>
+            <img style="width:100%;" src="bottom.png" alt="logo"/>
             <button onclick="domGen();">צור בת חדשה</button>
         </div>
 
