--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
          <p>    גרסא 1.0, נוצרה ע"י
             <a href="https://twitter.com/pitayaki">פיתהצ'ו</a>
                 ו
-                <a href="https://twitter.com/grandtheftaba">אפס דיפוט</a>
+                <a href="https://twitter.com/amba_ganuv">אפס דיפוט</a>
         </p>
         <div style="width:570px;">
 			<img id="random-pic" style="width:100%;" src="profile.png"/>
